COMPASS-3800: Fix overlapping collection names

--- a/packages/compass-sidebar/src/components/sidebar-collection/sidebar-collection.less
+++ b/packages/compass-sidebar/src/components/sidebar-collection/sidebar-collection.less
@@ -39,6 +39,7 @@
   align-items: stretch;
   padding: 4px 0;
   transition: background-color 180ms ease;
+  height: 28px;
 
   &-actions .compass-sidebar-icon,
   &-title {
@@ -72,10 +73,6 @@
 
   &-actions-ddl .compass-sidebar-icon:hover {
     color: @pw;
-  }
-
-  &:last-child {
-    margin-bottom: 24px;
   }
 
   /* :hover styles */
